Move arrows up, make dark

--- a/gallery.html
+++ b/gallery.html
@@ -84,8 +84,9 @@
         }
 
         /* Ensure close button is above the title bar */
-        #closeModal {
+        #closeModal, #prevImage, #nextImage {
             z-index: 52;
+            background: rgba(0, 0, 0, 0.9);
         }
     </style>
 </head>
