--- a/gallery.html
+++ b/gallery.html
@@ -88,7 +88,8 @@
             z-index: 52;
         }
         
-        #prevImage, #nextImage {
+        #prevImage, #nextImage {            
+            z-index: 52;
             background: rgba(0, 0, 0, 0.5);
             padding: 0.5rem;
         }
