--- a/gallery.html
+++ b/gallery.html
@@ -91,7 +91,7 @@
         #prevImage, #nextImage {            
             z-index: 52;
             background: rgba(0, 0, 0, 0.5);
-            padding: 0.5rem;
+            padding: 0.5rem 0.9rem 0.9rem 0.8rem;
         }
     </style>
 </head>
